--- a/PRS/src/app/product/product-detail/product-detail.component.html
+++ b/PRS/src/app/product/product-detail/product-detail.component.html
@@ -1,1 +1,40 @@
-<p>product-detail works!</p>
+<app-menu></app-menu>
+
+<table id="detail" class="table table-sm" *ngIf="product">
+        <tr>
+            <th>Id</th>
+            <td>{{product.id}}</td>
+        </tr>
+        <tr>
+            <th>Part Number</th>
+            <td>{{product.partNbr}}</td>
+        </tr>
+        <tr>
+            <th>Name</th>
+            <td>{{product.name}}</td>
+        </tr>
+        <tr>
+            <th>Price</th>
+            <td>{{product.price}}00 Gold</td>
+        </tr>
+        <tr>
+            <th>Unit</th>
+            <td>{{product.unit}}</td>
+        </tr>
+        <tr>
+            <th>Photopath</th>
+            <td>{{product.photoPath}}</td>
+        </tr>
+        <tr>
+            <th>Vendor Name</th>
+            <td>
+                <div *ngIf="product.vendor">{{product.vendor.name}}</div>
+            </td>
+        </tr>
+</table>
+<button (click)="return()" class="btn btn-primary btn-sm" *ngIf="!delVerify">Return</button>
+<button (click)="return()" class="btn btn-primary btn-sm" *ngIf="delVerify" disabled>Really?</button> | 
+<button (click)="verify()" class="btn btn-danger btn-sm" *ngIf="!delVerify">Delete</button>
+<button (click)="verify()" class="btn btn-info btn-sm" *ngIf="delVerify">Nevermind</button>
+<span *ngIf="delVerify"> | </span>
+<button (click)="delete()" class="btn btn-danger btn-sm" *ngIf="delVerify">Confirm</button>
