--- a/PRS/src/app/user/user-create/user-create.component.html
+++ b/PRS/src/app/user/user-create/user-create.component.html
@@ -38,4 +38,5 @@
         </tr>
     </table>
     <button (click)="save()" class="btn btn-primary">Save</button>
+    <button (click)="return()" class="btn btn-sm">Cancel</button>
 </div>
