--- a/PRS/src/app/request/request-create/request-create.component.html
+++ b/PRS/src/app/request/request-create/request-create.component.html
@@ -1,1 +1,27 @@
-<p>request-create works!</p>
+<div>
+    <table class="table table-sm">
+        <tr>
+            <td>Id</td>
+            <td><input [(ngModel)]="request.id" type="number" disabled></td>
+        </tr>
+        <tr>
+            <td>Description</td>
+            <td><input [(ngModel)]="request.description" type="text"></td>
+        </tr>
+        <tr>
+            <td>Justification</td>
+            <td><input [(ngModel)]="request.justification" type="text"></td>
+        </tr>
+        <tr>
+            <td>DeliveryMode</td>
+            <td>
+                <select [(ngModel)]="request.deliveryMode" type="text">
+                    <option value="Pickup">Pickup</option>
+                    <option value="Delivery">Delivery</option>
+                </select>
+            </td>
+        </tr>
+    </table>
+    <button (click)="save()" class="btn btn-primary">Save</button>
+    <button (click)="return()" class="btn btn-sm">Cancel</button>
+</div>
