--- a/PRS/src/app/core/about/about.component.html
+++ b/PRS/src/app/core/about/about.component.html
@@ -1,2 +1,9 @@
 <app-menu></app-menu>
-<p>about works!</p>
+<br>
+<h2 style="padding-left: 15px">About PRS</h2>
+<br>
+<pre style="padding-left: 15px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
+<h5>This Purchase Request System, or PRS, allows for simple handling of product requests,
+from managing databases of users, products, vendors, and requests, to streamlining the
+approval process for said requests.</h5>
+</pre>
