--- a/PRS/src/app/core/e404/e404.component.html
+++ b/PRS/src/app/core/e404/e404.component.html
@@ -1,2 +1,11 @@
 <app-menu></app-menu>
-<p>e404 works!</p>
+<br>
+<div style="text-align: center;">
+    <h2>Lost in Space?</h2>
+    <h4>404</h4>
+    <br>
+    <img src="../../../assets/Images/crying.png">
+    <br>
+    <br>
+    <blockquote>It's not your fault.</blockquote>
+</div>
