--- a/PRS/src/app/core/home/home.component.html
+++ b/PRS/src/app/core/home/home.component.html
@@ -1,2 +1,6 @@
 <app-menu></app-menu>
-<p>home works!</p>
+<br>
+<h2 style="text-indent: 20pt;">Purchase Request System</h2>
+<br>
+<h6 style="text-indent: 20pt;">Welcome to PRS!</h6>
+<h6 style="text-indent: 20pt;">It's very quiet here.</h6>
