--- a/PRS/src/app/product/product-list/product-list.component.html
+++ b/PRS/src/app/product/product-list/product-list.component.html
@@ -1,11 +1,13 @@
 <app-menu></app-menu>
+<br>
+<h2 style="text-indent: 20pt;">Products</h2>
 <div id="component">
     <div id="component-header">
         <a routerLink="/product/create">Create</a>
         | <input [(ngModel)]="searchCriteria" type="text" placeholder="Search">
     </div>
     <div id="component-content">
-        <table class="table table-stripped">
+        <table class="table table-striped">
             <thead>
             <tr>
                 <th><a (click)="sortFn('id')" class="btn btn-link">Id</a></th>
