--- a/PRS/src/app/request/request-detail/request-detail.component.html
+++ b/PRS/src/app/request/request-detail/request-detail.component.html
@@ -1,6 +1,8 @@
 <app-menu></app-menu>
-
-<table id="detail" class="table table-sm" *ngIf="request">
+<br>
+<div id="detail">
+<h3>Request Details</h3>
+<table class="table table-sm" *ngIf="request">
         <tr>
             <th>Id</th>
             <td>{{request.id}}</td>
