--- a/PRS/src/app/request/request-review-list/request-review-list.component.html
+++ b/PRS/src/app/request/request-review-list/request-review-list.component.html
@@ -4,7 +4,7 @@
         <input [(ngModel)]="searchCriteria" type="text" placeholder="Search">
     </div>
     <div id="component-content">
-        <table class="table table-stripped">
+        <table class="table table-striped">
             <thead>
             <tr>
                 <th><a (click)="sortFn('id')" class="btn btn-link">Id</a></th>
