--- a/PRS/src/app/product/product-detail/product-detail.component.html
+++ b/PRS/src/app/product/product-detail/product-detail.component.html
@@ -1,6 +1,8 @@
 <app-menu></app-menu>
-
-<table id="detail" class="table table-sm" *ngIf="product">
+<br>
+<div id="detail">
+<h3>Product Details</h3>
+<table class="table table-sm" *ngIf="product">
         <tr>
             <th>Id</th>
             <td>{{product.id}}</td>
