--- a/PRS/src/app/user/user-create/user-create.component.html
+++ b/PRS/src/app/user/user-create/user-create.component.html
@@ -1,3 +1,8 @@
+<app-menu></app-menu>
+<br>
+<div id="detail">
+<h3>Create New User</h3>
+<br>
 <div>
     <table class="table table-sm">
         <tr>
